# Loom

./: README.md  index.html  package-lock.json  package.json
docs/: ARCHITECTURE.md  LIMITATIONS.md  PERFORMANCE.md  perf-raw.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  error.rs  events.rs  lib.rs  vault.rs  watcher.rs
src-tauri/src/index/: mod.rs  parser.rs  resolver.rs
src/components/: BacklinksPanel.tsx  ConflictBanner.tsx  EditorPane.tsx  Logo.tsx  SearchBar.tsx  Sidebar.tsx  Toast.tsx  VaultPicker.tsx
src/editor/: Editor.tsx  interactions.ts  livePreview.ts  theme.ts  wikilinkMarkdown.ts
src/graph/: BigGraph.tsx  FpsMeter.tsx  GraphView.tsx  palette.ts
src/lib/: ipc.ts  resolve.ts  types.ts
src/state/: store.ts
src/types/: d3-force-3d.d.ts
