[package]
name = "loom"
version = "0.1.0"
description = "Local-first Markdown notes with a 3D knowledge graph"
authors = ["Mudrika Kumawat"]
edition = "2021"
# `cargo run` must pick the app, not the genvault/benchindex utility bins.
default-run = "loom"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "loom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2"
notify = "8"
trash = "5"
dunce = "1"
